fix tooltip z-index

--- a/mnote-extensions/richtext/richtext.scss
+++ b/mnote-extensions/richtext/richtext.scss
@@ -257,9 +257,13 @@
       }
     }
 
-    &:hover .se-tooltip-inner {
-      visibility: visible;
-      opacity: 1;
+    &:hover {
+      z-index: 1;
+
+      .se-tooltip-inner {
+        visibility: visible;
+        opacity: 1;
+      }
     }
   }
 
